--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 
 title: Seojin Lee
 description: Ph.D. student | Stanford University | Vision Science & Computational Modeling
+remote_theme: jitinnair1/gradfolio
 
 nav:
   - name: "Home"
